--- a/frontend-web/src/pages/Data/Tabs/styles.css
+++ b/frontend-web/src/pages/Data/Tabs/styles.css
@@ -1,10 +1,10 @@
-.pagination-container {
+.tab-container {
     margin-top: 30px;
     margin-bottom: 10px;
     text-align: center;
   }
   
-  .pagination-item {
+  .tab-item {
     width: 150px;
     height: 40px;
     border-radius: 10px;
@@ -13,19 +13,19 @@
     font-size: 18px;
   }
   
-  .pagination-item.active {
+  .tab-item.active {
     background: var(--color-turquoise);
   }
   
-  .pagination-item.inactive {
+  .tab-item.inactive {
     background: var(--color-darkslategray);
     color: var(--color-coral);
   }
   
-  .pagination-item.active:hover {
+  .tab-item.active:hover {
     background-color: #04c7ef;
   }
   
-  .pagination-item.inactive:hover {
+  .tab-item.inactive:hover {
     background-color: #29353b;
   }
