--- a/frontend-web/src/pages/Data/Pagination/styles.css
+++ b/frontend-web/src/pages/Data/Pagination/styles.css
@@ -11,6 +11,16 @@
     font-weight: bold;
     font-size: 18px;
   }
+
+  .pagination-total {
+    width: 100px;
+    height: 20px;
+    border-radius: 10px;
+    margin-right: 10px;
+    font-weight: bold;
+    font-size: 18px;
+    background: var(--color-emerald);
+  }
   
   .pagination-item.active {
     background: var(--color-turquoise);
